--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,177 @@
 baseURL: https://roaraeonliou.github.io/
 languageCode: en-us
-title: RLTEA-BLOG
+title: RLTEA BLOG
 theme: ["PaperMod"]
+
+enableRobotsTXT: true
+buildDrafts: false
+buildFuture: false
+buildExpired: false
+
+minify:
+  disableXML: true
+  minifyOutput: true
+
+params:
+  env: production # to enable google analytics, opengraph, twitter-cards and schema.
+  title: RLTEA BLOG
+  description: "ExampleSite description"
+  keywords: [Blog, Portfolio, PaperMod]
+  author: RLTea
+  # author: ["Me", "You"] # multiple authors
+  images: ["<link or path of image for opengraph, twitter-cards>"]
+  # 
+  showAllPagesInArchive: true
+    # - copymd
+    # - test2
+  # 日期格式
+  DateFormat: "January 2, 2006"
+  # 默认主题
+  defaultTheme: auto # dark, light
+  disableThemeToggle: false
+  # 展示阅读时间
+  ShowReadingTime: true
+  # 展示分享按钮
+  ShowShareButtons: true
+  # 显示上一篇、下一篇博客按钮
+  ShowPostNavLinks: true
+  # 展示面包屑导航栏
+  ShowBreadCrumbs: true
+  # 显示复制代码按钮
+  ShowCodeCopyButtons: true
+  # 显示字数统计
+  ShowWordCount: true
+
+  ShowRssButtonInSectionTermList: true
+  UseHugoToc: true
+  disableSpecial1stPost: false
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: false
+  tocopen: false
+
+  assets:
+    # disableHLJS: true # to disable highlight.js
+    # disableFingerprinting: true
+    favicon: "<link / abs url>"
+    favicon16x16: "<link / abs url>"
+    favicon32x32: "<link / abs url>"
+    apple_touch_icon: "<link / abs url>"
+    safari_pinned_tab: "<link / abs url>"
+
+  label:
+    text: "Home"
+    icon: /apple-touch-icon.png
+    iconHeight: 35
+
+  # profile-mode
+  profileMode:
+    enabled: false # needs to be explicitly set
+    title: ExampleSite
+    subtitle: "This is subtitle"
+    imageUrl: "<img location>"
+    imageWidth: 120
+    imageHeight: 120
+    imageTitle: my image
+    buttons:
+      - name: Posts
+        url: posts
+      - name: Tags
+        url: tags
+
+  # 主页信息配置
+  homeInfoParams:
+    # 标题, 标题要使用双引号
+    Title: "Hi there \U0001F44B"
+    # 内容, 不要使用引号
+    Content: Welcome to my blog
+  
+  # 主页社交按钮
+  socialIcons:
+    - name: x
+      url: "https://x.com/"
+    - name: stackoverflow
+      url: "https://stackoverflow.com"
+    - name: github
+      url: "https://github.com/"
+
+  analytics:
+    google:
+      SiteVerificationTag: "XYZabc"
+    bing:
+      SiteVerificationTag: "XYZabc"
+    yandex:
+      SiteVerificationTag: "XYZabc"
+
+  # 封面相关设置
+  cover:
+    # 如果设置为true, 则点击图片会跳转到新的页面展示全大小的图片
+    linkFullImages: false
+    hidden: true # hide everywhere but not in structured data
+    hiddenInList: true # hide on list pages and home
+    hiddenInSingle: true # hide on single page
+
+  editPost:
+    URL: "https://github.com/<path_to_repo>/content"
+    Text: "Suggest Changes" # edit text
+    appendFilePath: true # to append file path to Edit link
+
+  # for search
+  # https://fusejs.io/api/options.html
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
+    keys: ["title", "permalink", "summary", "content"]
+
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON # necessary for search
+
+
+# 目录设置
+menu:
+  main:
+    # 归档, 权重用来判断前后顺序
+    - identifier: archives
+      name: Archives
+      url: /archives/
+      weight: 10
+    # 分类
+    - identifier: categories
+      name: Categories
+      url: /categories/
+      weight: 20
+    # 标签
+    - identifier: tags
+      name: Tags
+      url: /tags/
+      weight: 30
+    # 搜索
+    - identifier: search
+      name: Search
+      url: /search/
+      weight: 40
+    # 其他链接
+    # - identifier: example
+    #   name: example.org
+    #   url: https://example.org
+    #   weight: 40
+# Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
+pygmentsUseClasses: true
+markup:
+  highlight:
+    noClasses: false
+    # anchorLineNos: true
+    # codeFences: true
+    # guessSyntax: true
+    # lineNos: true
+    # style: monokai
